# pf_common

./: .clang-format  CMakeLists.txt  LICENSE  README.md  vcpkg.json
.github/workflows/: c-cpp.yml  macos-tests.yml  ubuntu-tests.yml  windows-tests.yml
cmake/: HunterGate.cmake  pf_commonConfig.cmake.in
docs/: BoundingBox_8h.html  BoundingBox_8h__incl.map  BoundingBox_8h__incl.md5  BoundingBox_8h_source.html  BoundingSphere_8h.html  BoundingSphere_8h__incl.map  BoundingSphere_8h__incl.md5  BoundingSphere_8h_source.html  ByteLiterals_8h.html  ByteLiterals_8h__incl.map  ByteLiterals_8h__incl.md5  ByteLiterals_8h_source.html  ClonePtr_8h_source.html  CommonType_8h_source.html  Geometry_8h.html  Geometry_8h__incl.map  Geometry_8h__incl.md5  Geometry_8h_source.html  ILogger_8h.html  ILogger_8h__incl.map  ILogger_8h__incl.md5  ILogger_8h_source.html  Incrementable_8h.html  Incrementable_8h__dep__incl.map  Incrementable_8h__dep__incl.md5  Incrementable_8h__incl.map  Incrementable_8h__incl.md5  Incrementable_8h_source.html  Iterable_8h_source.html  LazyInit_8h.html  LazyInit_8h__incl.map  LazyInit_8h__incl.md5  LazyInit_8h_source.html  Negations_8h_source.html  ObjectPool_8h.html  ObjectPool_8h__incl.map  ObjectPool_8h__incl.md5  ObjectPool_8h_source.html  OneOf_8h.html  OneOf_8h__dep__incl.map  (+295 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  (+42 more)
include/pf/: LazyInit.h  ObjectPool.h  RAII.h  Visitor.h  algorithms.h  math.h  tuple.h
include/pf/concepts/: Incrementable.h  Iterable.h  OneOf.h  PtrConstructible.h  StreamConcepts.h
include/pf/coroutines/: Sequence.h
include/pf_common/: ByteLiterals.h  ClonePtr.h  Error.h  Explicit.h  FixedString.h  ILogger.h  LazyInit.h  MandatoryValue.h  ObjectPool.h  RAII.h  ScopeExit.h  StaticTree.h  StaticVector.h  Subscription.h  Tree.h  UUID.h  Visitor.h  algorithms.h  always_false.h  array.h  bin.h  bits.h  casts.h  const_init.h  enums.h  files.h  fundamental_types.h  hex_utils.h  macros.h  meta.h  specializations.h  static_vector.h  tuple.h  type_name.h  unreachable.h
include/pf_common/allocators/: SmallVectorAllocator.h
include/pf_common/concepts/: Allocator.h  CommonType.h  Dereferencable.h  DowncastableTo.h  Enum.h  FundamentalTypes.h  Incrementable.h  Integral.h  Iterable.h  Negations.h  OneOf.h  PointerLike.h  PtrConstructible.h  Serializable.h  StreamConcepts.h  StringConvertible.h  downcast.h  ranges.h  references.h
include/pf_common/containers/: FixedString.h  SmallVector.h  StaticVector.h  StringLiteral.h  Tree.h
include/pf_common/coroutines/: Sequence.h
include/pf_common/detail/: StaticTree.tpp  StaticTree_detail.tpp  StaticTree_node.tpp
include/pf_common/details/: fundamental_types_details.h
include/pf_common/exceptions/: Exceptions.h  StackTraceException.cpp  StackTraceException.h
include/pf_common/math/: BoundingBox.h  BoundingBox.tpp  BoundingSphere.h  BoundingSphere.tpp  Geometry.h  Range.h  ViewFrustum.h  common.h
include/pf_common/parallel/: Safe.h  SafeQueue.h  ThreadPool.h
include/pf_common/views/: Dereference.h  View2D.h
tests/: ByteLiterals.cpp  FixedString.cpp  LazyInit.cpp  ObjectPool.cpp  RAII.cpp  ScopeExit.cpp  SmallVector.cpp  StaticVector.cpp  StringLiteral.cpp  algorithm.cpp  array.cpp  casts.cpp  concepts.cpp  coroutines.cpp  enums.cpp  static_vector.cpp  test_main.cpp  uuid.cpp
